--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -1,8 +1,8 @@
 name: "Synopsys Intelligent Security Scan"
 
 on:
-  #push:
-  #  branches: [ master ]
+  push:
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -34,7 +34,7 @@ jobs:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
-        workflowVersion: 2021.12.0-alpha-2
+        workflowVersion: 2021.12.0.12-alpha
         manifestType: yml
         additionalWorkflowArgs: --persona=$persona --release.type=$release_type --polaris.url=${{secrets.POLARIS_SERVER_URL}} 
                 --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} --codedx.api.key=${{secrets.CODEDX_API_KEY}}
@@ -70,7 +70,7 @@ jobs:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
-        workflowVersion: 2021.12.0-alpha-2
+        workflowVersion: 2021.12.0.12-alpha
         manifestType: yml
         additionalWorkflowArgs: --persona=$persona --slack.channel.id=C015LGE7RRQ --slack.token=${{secrets.ORG_SLACK_TOKEN}} 
                 --jira.project.name=STAR --jira.assignee="Rahul Gunasekaran" --jira.api.url=https://rahulguna.atlassian.net --jira.username=rahulguna10@gmail.com --jira.auth.token=${{secrets.JIRA_TOKEN}}
