--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ jobs:
           /tmp/polaris analyze -w
       
     - task: Bash@3
-      displayName: Software Composition Analysis with Blackduck
+      displayName: Software Composition Analysis with BlackDuck
       name: 'SCA_With_BlackDuck'
       condition: eq(variables['IS_SCA_ENABLED'], 'true')
       inputs:
