--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,18 +8,28 @@ jobs:
       vmImage: ubuntu-latest
 
     variables:
+      #IO details
       PERSONA: devsecops
       RELEASE: minor
       MANIFEST_TYPE: yml
       PROJECT_NAME: "devsecops-test/github-io-sample"
+      #SCM details
       SCM_TYPE: github
       SCM_OWNER: devsecops-test
       SCM_REPO_NAME: github-io-sample
       SCM_BRANCH_NAME: master
+      GITHUB_USERNAME: rahulguna10
+      #Blackduck details
+      BLACKDUCK_SERVER_URL: https://bizdevhub.blackducksoftware.com
+      BLACKDUCK_PROJECT_NAME: "devsecops-test/github-io-sample:1.0"
       BD_PROJECT_NAME: "devsecops-test/github-io-sample"
       BLACKDUCK_PROJECT_VERSION: 1.0
-      POLARIS_PROJECT_NAME: sig-devsecops/github-io-sample
+      #Polaris details
+      POLARIS_SERVER_URL: "https://csprod.polaris.synopsys.com"
+      POLARIS_PROJECT_NAME: "sig-devsecops/github-io-sample"
       POLARIS_BRANCH_NAME: origin/master
+      CODEDX_SERVER_URL: http://23.99.131.170:8080/codedx
+      CODEDX_PROJECT_ID: 1
       SYNOPSYS_AZURE_TOOLS_REPO: https://github.com/synopsys-sig-community/synopsys-azure-tools
 
     steps:
@@ -32,9 +42,11 @@ jobs:
           echo "Trigger IO"
           wget "https://raw.githubusercontent.com/synopsys-sig/io-artifacts/2021.12.0.12-alpha/prescription.sh"
           chmod +x prescription.sh
-          ./prescription.sh --release.type="$(RELEASE)" --persona="$(PERSONA)" --stage="IO" --io.url="$(IO_SERVER_URL)" --io.token="$(IO_ACCESS_TOKEN)" \
-          --workflow.url="$(WORKFLOW_ENGINE_SERVER_URL)" --codedx.api.key="$(CODEDX_API_KEY)" \
-            --asset.id="$(PROJECT_NAME)" --scm.type="$(SCM_TYPE)" --scm.owner="$(SCM_OWNER)" --scm.repo.name="$(SCM_REPO_NAME)" --scm.branch.name="$(SCM_BRANCH_NAME)" \
+          ./prescription.sh --release.type="$(RELEASE)" --persona="$(PERSONA)" --stage="IO" --io.url="$(IO_SERVER_URL)" --io.token="$(IO_ACCESS_TOKEN)" --workflow.url="$(WORKFLOW_ENGINE_SERVER_URL)" \
+            --asset.id="$(PROJECT_NAME)" --scm.type="$(SCM_TYPE)" --scm.owner="$(SCM_OWNER)" --scm.repo.name="$(SCM_REPO_NAME)" --scm.branch.name="$(SCM_BRANCH_NAME)" --github.username="$(GITHUB_USERNAME)" \
+            --polaris.project.name="$(POLARIS_PROJECT_NAME)" --polaris.url="$(POLARIS_SERVER_URL)" \
+            --blackduck.project.name="$(BLACKDUCK_PROJECT_NAME)" --blackduck.url="$(BLACKDUCK_SERVER_URL)" \
+            --codedx.url="$(CODEDX_SERVER_URL)" --codedx.project.id="$(CODEDX_PROJECT_ID)" --codedx.api.key="$(CODEDX_API_KEY)"\
             ${ADDITIONALARGS}
           export IS_SAST_ENABLED=$(jq -r '.security.activities.sast.enabled' result.json)
           export IS_SCA_ENABLED=$(jq -r '.security.activities.sca.enabled' result.json)
@@ -97,9 +109,10 @@ jobs:
           echo "Trigger IO Workflow"
           wget "https://github.com/synopsys-sig/io-artifacts/releases/download/2021.12.0.12-alpha/WorkflowClient.jar"
           chmod +x WorkflowClient.jar
-          ./prescription.sh --stage="WORKFLOW" --io.url=$(IO_SERVER_URL) --io.token=$(IO_ACCESS_TOKEN) --workflow.url=$(WORKFLOW_ENGINE_SERVER_URL) \
-          --polaris.token=$(POLARIS_ACCESS_TOKEN) --blackduck.api.token=$(BLACKDUCK_ACCESS_TOKEN) \
-          --msteams.webhook.url=$(TEAMS_WEBHOOK_URL) --codedx.api.key=$(CODEDX_API_KEY) \
+          ./prescription.sh --stage="WORKFLOW" --io.url=$(IO_SERVER_URL) --io.token=$(IO_ACCESS_TOKEN) --workflow.url=$(WORKFLOW_ENGINE_SERVER_URL) --msteams.webhook.url=$(TEAMS_WEBHOOK_URL) \
+          --polaris.project.name="$(POLARIS_PROJECT_NAME)" --polaris.token="$(POLARIS_ACCESS_TOKEN)" --polaris.url="$(POLARIS_SERVER_URL)" \
+          --blackduck.project.name="$(BLACKDUCK_PROJECT_NAME)" --blackduck.api.token="$(BLACKDUCK_ACCESS_TOKEN)" --blackduck.url="$(BLACKDUCK_SERVER_URL)" \
+          --codedx.url="$(CODEDX_SERVER_URL)" --codedx.api.key="$(CODEDX_API_KEY)" --codedx.project.id="$(CODEDX_PROJECT_ID)" \
           --IS_SAST_ENABLED=$(IS_SAST_ENABLED) --IS_SCA_ENABLED=$(IS_SCA_ENABLED) --IS_DAST_ENABLED=$(IS_DAST_ENABLED)
           echo "Triggering WorkFlowEngine "
           if [ $(MANIFEST_TYPE) == "yml" ]; then
