--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ jobs:
     variables:
       #IO details
       SYNOPSYS_AZURE_TOOLS_REPO: https://github.com/synopsys-sig-community/synopsys-azure-tools
-      PERSONA: developer
+      PERSONA: devsecops
       RELEASE: minor
       MANIFEST_TYPE: yml
       PROJECT_NAME: "devsecops-test/github-io-sample"
