--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -37,8 +37,7 @@ jobs:
         workflowVersion: 2021.12.0.12-alpha
         manifestType: yml
         additionalWorkflowArgs: --persona=$persona --release.type=$release_type --polaris.url=${{secrets.POLARIS_SERVER_URL}} 
-                --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
-#                 --codedx.api.key=${{secrets.CODEDX_API_KEY}}
+                --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} --codedx.api.key=${{secrets.CODEDX_API_KEY}}
         stage: "IO"
     
     # Please note that the ID in previous step was set to prescription
