--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -26,31 +26,25 @@ jobs:
     
     - name: Synopsys Intelligent Security Scan
       id: prescription
-      uses: synopsys-sig/intelligent-security-scan@2021.12.0-alpha
-      env:
-        persona: devsecops
-        release_type: minor
+      uses: synopsys-sig/intelligent-security-scan@48eedfcd42bc342a294dc495ac452797b2d9ff08
       with:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
-        workflowVersion: 2021.12.0.12-alpha
-        manifestType: yml
-        additionalWorkflowArgs: --persona=$persona --release.type=$release_type --polaris.url=${{secrets.POLARIS_SERVER_URL}} 
-                --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} --codedx.api.key=${{secrets.CODEDX_API_KEY}}
-        stage: "IO"
+        additionalWorkflowArgs: --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}}
+        stage: "IO"    
     
-    # Please note that the ID in previous step was set to prescription
-    # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
-    # is defined in settings
-    - name: Static Analysis with Polaris
-      if: ${{steps.prescription.outputs.sastScan == 'true' }}
-      run: |
-          export POLARIS_SERVER_URL=${{ secrets.POLARIS_SERVER_URL}}
-          export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
-          wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
-          unzip -j polaris_cli-linux64.zip -d /tmp
-          /tmp/polaris analyze -w
+#     # Please note that the ID in previous step was set to prescription
+#     # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
+#     # is defined in settings
+#     - name: Static Analysis with Polaris
+#       if: ${{steps.prescription.outputs.sastScan == 'true' }}
+#       run: |
+#           export POLARIS_SERVER_URL=${{ secrets.POLARIS_SERVER_URL}}
+#           export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
+#           wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
+#           unzip -j polaris_cli-linux64.zip -d /tmp
+#           /tmp/polaris analyze -w
     
 #     # Please note that the ID in previous step was set to prescription
 #     # in order for this logic to work
