--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -40,7 +40,7 @@ jobs:
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
         workflowVersion: 2021.12.2
-        additionalWorkflowArgs: --persona=$persona --release.type=$release_type --manifest_type=$manifest_type --github.token=${{secrets.SCM_ACCESS_TOKEN}} --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}}
+        additionalWorkflowArgs: --slack.channel.id={{secrets.SLACK_CHANNEL_ID}} --slack.token={{secrets.SLACK_TOKEN}} --persona=$persona --release.type=$release_type --manifest_type=$manifest_type --github.token=${{secrets.SCM_ACCESS_TOKEN}} --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}}
         stage: "IO"    
     
 #     # Please note that the ID in previous step was set to prescription
