--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -40,20 +40,20 @@ jobs:
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
         workflowVersion: 2021.12.2
-        additionalWorkflowArgs: --slack.channel.id={{secrets.SLACK_CHANNEL_ID}} --slack.token={{secrets.SLACK_TOKEN}} --persona=$persona --release.type=$release_type --manifest_type=$manifest_type --github.token=${{secrets.SCM_ACCESS_TOKEN}} --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}}
+        additionalWorkflowArgs: --slack.channel.id=${{secrets.SLACK_CHANNEL_ID}} --slack.token=${{secrets.SLACK_TOKEN}} --persona=$persona --release.type=$release_type --manifest_type=$manifest_type --github.token=${{secrets.SCM_ACCESS_TOKEN}} --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}}
         stage: "IO"    
     
-#     # Please note that the ID in previous step was set to prescription
-#     # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
-#     # is defined in settings
-#     - name: Static Analysis with Polaris
-#       if: ${{steps.prescription.outputs.sastScan == 'true' }}
-#       run: |
-#           export POLARIS_SERVER_URL=${{ secrets.POLARIS_SERVER_URL}}
-#           export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
-#           wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
-#           unzip -j polaris_cli-linux64.zip -d /tmp
-#           /tmp/polaris analyze -w
+    # Please note that the ID in previous step was set to prescription
+    # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
+    # is defined in settings
+    - name: Static Analysis with Polaris
+      if: ${{steps.prescription.outputs.sastScan == 'true' }}
+      run: |
+          export POLARIS_SERVER_URL=${{ secrets.POLARIS_SERVER_URL}}
+          export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
+          wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
+          unzip -j polaris_cli-linux64.zip -d /tmp
+          /tmp/polaris analyze -w
     
 #     # Please note that the ID in previous step was set to prescription
 #     # in order for this logic to work
