--- a/io-manifest.json
+++ b/io-manifest.json
@@ -64,6 +64,18 @@
         "channelidentifier": "<<SLACK_CHANNEL_ID>>",
         "bearertoken": "<<SLACK_TOKEN>>"
       }
+    },
+    {
+      "connector_name": "github",
+      "fields": {
+         "file_path": "workflowengine-results.sarif",
+         "owner_name": "<<GITHUB_OWNER_NAME>>",
+         "repository_name": "<<GITHUB_REPO_NAME>>",
+         "ref": "<<GITHUB_REF>>",
+         "commit_id": "<<GITHUB_COMMIT_ID>>",
+         "username": "<<GITHUB_USERNAME>>",
+         "accesstoken": "<<GITHUB_ACCESS_TOKEN>>"
+       }
     }
   ],
    "tool_information": [
