--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -43,17 +43,17 @@ jobs:
         additionalWorkflowArgs: --slack.channel.id=${{secrets.SLACK_CHANNEL_ID}} --slack.token=${{secrets.SLACK_TOKEN}} --persona=$persona --release.type=$release_type --manifest_type=$manifest_type --github.token=${{secrets.SCM_ACCESS_TOKEN}} --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}}
         stage: "IO"    
     
-    # Please note that the ID in previous step was set to prescription
-    # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
-    # is defined in settings
-    - name: Static Analysis with Polaris
-      if: ${{steps.prescription.outputs.sastScan == 'true' }}
-      run: |
-          export POLARIS_SERVER_URL=${{ secrets.POLARIS_SERVER_URL}}
-          export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
-          wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
-          unzip -j polaris_cli-linux64.zip -d /tmp
-          /tmp/polaris analyze -w
+#     # Please note that the ID in previous step was set to prescription
+#     # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
+#     # is defined in settings
+#     - name: Static Analysis with Polaris
+#       if: ${{steps.prescription.outputs.sastScan == 'true' }}
+#       run: |
+#           export POLARIS_SERVER_URL=${{ secrets.POLARIS_SERVER_URL}}
+#           export POLARIS_ACCESS_TOKEN=${{ secrets.POLARIS_ACCESS_TOKEN}}
+#           wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
+#           unzip -j polaris_cli-linux64.zip -d /tmp
+#           /tmp/polaris analyze -w
     
 #     # Please note that the ID in previous step was set to prescription
 #     # in order for this logic to work
@@ -78,9 +78,9 @@ jobs:
         additionalWorkflowArgs: --slack.channel.id=${{secrets.SLACK_CHANNEL_ID}} --slack.token=${{secrets.SLACK_TOKEN}} --persona=$persona --release.type=$release_type --manifest_type=$manifest_type --github.token=${{secrets.SCM_ACCESS_TOKEN}} --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} --IS_SAST_ENABLED=${{steps.prescription.outputs.sastScan}} --IS_SCA_ENABLED=${{steps.prescription.outputs.scaScan}} --IS_DAST_ENABLED=false
         stage: "WORKFLOW"
     
-#     - name: Upload SARIF file
-#       if: ${{steps.prescription.outputs.sastScan == 'true' }}
-#       uses: github/codeql-action/upload-sarif@v1
-#       with:
-#         # Path to SARIF file relative to the root of the repository
-#         sarif_file: workflowengine-results.sarif
+    - name: Upload SARIF file
+      if: ${{steps.prescription.outputs.sastScan == 'true' }}
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        # Path to SARIF file relative to the root of the repository
+        sarif_file: workflowengine-results.sarif
