--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -52,7 +52,7 @@ jobs:
       uses: actions/checkout@v2
     - run: |
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
-    - run: git diff origin/master HEAD     
+    - run: git diff --name-only origin/master HEAD     
     
 #     # Please note that the ID in previous step was set to prescription
 #     # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
