--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -17,16 +17,14 @@ jobs:
     
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
-        # We must fetch at least the immediate parents so that if this is
-        # a pull request then we can checkout the head.
         fetch-depth: 2
 
-    # If this run was triggered by a pull request event, then checkout
-    # the head of the pull request instead of the merge commit.
-    - run: git checkout HEAD^2
-      if: ${{ github.event_name == 'pull_request' }}
+#     # If this run was triggered by a pull request event, then checkout
+#     # the head of the pull request instead of the merge commit.
+#     - run: git checkout HEAD^2
+#       if: ${{ github.event_name == 'pull_request' }}
     
 #     - name: Synopsys Intelligent Security Scan
 #       id: prescription
@@ -49,8 +47,7 @@ jobs:
     # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
     # is defined in settings
     - name: Static Analysis with Polaris
-      uses: actions/checkout@v2
-    - run: |
+      run: |
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           git --no-pager diff origin/master --name-only > polaris-files-to-scan.txt
           echo "Files Changed -->"
