--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -57,7 +57,7 @@ jobs:
           export POLARIS_FF_ENABLE_COVERITY_INCREMENTAL=true
           wget -q ${{ secrets.POLARIS_SERVER_URL}}/api/tools/polaris_cli-linux64.zip
           unzip -j polaris_cli-linux64.zip -d /tmp
-          polaris analyze -w --incremental polaris-files-to-scan.txt
+          /tmp/polaris analyze -w --incremental polaris-files-to-scan.txt
     
 #     # Please note that the ID in previous step was set to prescription
 #     # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
