--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -20,33 +20,26 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 2
-
-#     # If this run was triggered by a pull request event, then checkout
-#     # the head of the pull request instead of the merge commit.
-#     - run: git checkout HEAD^2
-#       if: ${{ github.event_name == 'pull_request' }}
     
-#     - name: Synopsys Intelligent Security Scan
-#       id: prescription
-#       uses: akshayme-synp/intelligent-security-scan@try-branch
-#       env:
-#         persona: devsecops
-#         release_type: minor
-#         manifest_type: json
-#       with:
-#         ioServerUrl: ${{secrets.IO_SERVER_URL}}
-#         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
-#         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
-#         workflowVersion: 2021.12.2
-#         additionalWorkflowArgs: --slack.channel.id=${{secrets.SLACK_CHANNEL_ID}} --slack.token=${{secrets.SLACK_TOKEN}} --persona=$persona --release.type=$release_type --manifest_type=$manifest_type --github.token=${{secrets.SCM_ACCESS_TOKEN}} --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}}
-#         stage: "IO"   
-
-
+    - name: Synopsys Intelligent Security Scan
+      id: prescription
+      uses: akshayme-synp/intelligent-security-scan@try-branch
+      env:
+        persona: developer
+        release_type: major
+        manifest_type: json
+      with:
+        ioServerUrl: ${{secrets.IO_SERVER_URL}}
+        ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
+        workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
+        workflowVersion: 2021.12.2
+        additionalWorkflowArgs: --slack.channel.id=${{secrets.SLACK_CHANNEL_ID}} --slack.token=${{secrets.SLACK_TOKEN}} --persona=$persona --release.type=$release_type --manifest_type=$manifest_type --github.token=${{secrets.SCM_ACCESS_TOKEN}} --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}}
+        stage: "IO"
 
     # Please note that the ID in previous step was set to prescription
     # in order for this logic to work also make sure that POLARIS_ACCESS_TOKEN
     # is defined in settings
-    - name: Static Analysis with Polaris
+    - name: Incremental Static Analysis with Polaris
       run: |
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           git --no-pager diff origin/master --name-only > polaris-files-to-scan.txt
@@ -79,20 +72,29 @@ jobs:
 #       with:
 #          args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_TOKEN}}" --detect.tools="SIGNATURE_SCAN,DETECTOR"'
     
-#     - name: Synopsys Intelligent Security Scan
-#       if: ${{ steps.prescription.outputs.sastScan == 'true' || steps.prescription.outputs.scaScan == 'true' }}
-#       uses: akshayme-synp/intelligent-security-scan@try-branch
-#       env:
-#         persona: devsecops
-#         release_type: minor
-#         manifest_type: json
-#       with:
-#         ioServerUrl: ${{secrets.IO_SERVER_URL}}
-#         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
-#         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
-#         workflowVersion: 2021.12.2
-#         additionalWorkflowArgs: --slack.channel.id=${{secrets.SLACK_CHANNEL_ID}} --slack.token=${{secrets.SLACK_TOKEN}} --persona=$persona --release.type=$release_type --manifest_type=$manifest_type --github.token=${{secrets.SCM_ACCESS_TOKEN}} --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} --IS_SAST_ENABLED=${{steps.prescription.outputs.sastScan}} --IS_SCA_ENABLED=${{steps.prescription.outputs.scaScan}} --IS_DAST_ENABLED=false
-#         stage: "WORKFLOW"
+    - name: Synopsys Intelligent Security Scan
+      if: ${{ steps.prescription.outputs.sastScan == 'true' || steps.prescription.outputs.scaScan == 'true' }}
+      uses: akshayme-synp/intelligent-security-scan@try-branch
+      env:
+        persona: developer
+        release_type: major
+        manifest_type: json
+      with:
+        ioServerUrl: ${{secrets.IO_SERVER_URL}}
+        ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
+        workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
+        workflowVersion: 2021.12.2
+        additionalWorkflowArgs: --slack.channel.id=${{secrets.SLACK_CHANNEL_ID}} --slack.token=${{secrets.SLACK_TOKEN}} --persona=$persona --release.type=$release_type --manifest_type=$manifest_type --github.token=${{secrets.SCM_ACCESS_TOKEN}} --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} --IS_SAST_ENABLED=${{steps.prescription.outputs.sastScan}} --IS_SCA_ENABLED=${{steps.prescription.outputs.scaScan}} --IS_DAST_ENABLED=false
+        stage: "WORKFLOW"
+        
+    - name: Upload Artifact to GitHub
+      if: ${{steps.prescription.outputs.sastScan == 'true' }}
+      uses: actions/upload-artifact@v2
+      with:
+        name: "scan results"
+        path: |
+            workflowengine-results.sarif
+            /home/runner/work/github-io-sample/github-io-sample/.synopsys/polaris/data/coverity/2021.12.1/idir/incremental-results/
     
 #     - name: Upload SARIF file
 #       if: ${{steps.prescription.outputs.sastScan == 'true' }}
