--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -2,7 +2,7 @@ name: "Synopsys Intelligent Security Scan"
 
 on:
   push:
-   branches: [ master ]
+   branches: [ master-123 ]
 #   pull_request:
 #     branches: [ master ]
 
