--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -14,7 +14,11 @@ jobs:
       security-events: write
     
     steps:
-    - name: Build
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
+        
+    - name: Run powershell
       shell: pwsh
       run: |
         .\prescription.ps1
