--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -21,4 +21,21 @@ jobs:
     - name: Run powershell
       shell: pwsh
       run: |
-        .\prescription.ps1
+        .\prescription.ps1 -stage 'io' `
+          -io_url 'http://47e7-98-164-202-58.ngrok.io' `
+          -io_token '${{secrets.IO_SERVER_TOKEN}}' `
+          -project_name 'akshayme-synp/insecure-bank' `
+          -scm_type 'github' `
+          -scm_owner 'akshayme-synp' `
+          -scm_repo_name 'insecure-bank' `
+          -scm_branch_name 'master' `
+          -github_username 'akshayme-synp' `
+          -github_access_token 'my---github_access_token' `
+          -gitlab_url 'https://www.gitlab.com' `
+          -gitlab_token 'my---gitlab_token' `
+          -persona 'devsecops' `
+          -release_type 'minor' `
+          -polaris_project_name 'akshayme-synp/insecure-bank' `
+          -polaris_server_url 'https://csprod.polaris.synopsys.com' `
+          -polaris_access_token '${{secrets.POLARIS_ACCESS_TOKEN}}' `
+          -is_sast_enabled 'true'
