--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -30,7 +30,7 @@ jobs:
           -scm_repo_name 'insecure-bank' `
           -scm_branch_name 'master' `
           -github_username 'akshayme-synp' `
-          -github_access_token 'my---github_access_token' `
+          -github_access_token '${{secrets.SCM_ACCESS_TOKEN}}' `
           -gitlab_url 'https://www.gitlab.com' `
           -gitlab_token 'my---gitlab_token' `
           -persona 'devsecops' `
