--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -20,6 +20,7 @@ jobs:
         
     - name: Run powershell
       shell: pwsh
+      id: prescription
       run: |
         .\prescription.ps1 -stage 'io' `
           -io_url '${{secrets.IO_SERVER_URL}}' `
@@ -39,3 +40,8 @@ jobs:
           -polaris_server_url '${{secrets.POLARIS_SERVER_URL}}' `
           -polaris_access_token '${{secrets.POLARIS_ACCESS_TOKEN}}' `
           -is_sast_enabled 'true'
+          echo "::set-output name=production::true"
+          
+    - name: Check outputs
+      shell: pwsh
+      run: echo ${{ steps.prescription.outputs.production }}
