--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -40,8 +40,8 @@ jobs:
           -polaris_server_url '${{secrets.POLARIS_SERVER_URL}}' `
           -polaris_access_token '${{secrets.POLARIS_ACCESS_TOKEN}}' `
           -is_sast_enabled 'true'
-          echo "::set-output name=production::true"
+          echo "::set-output name=isSastEnabled::${$isSastEnabled}"
           
     - name: Check outputs
       shell: pwsh
-      run: echo ${{ steps.prescription.outputs.production }}
+      run: echo ${{ steps.prescription.outputs.isSastEnabled }}
