--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -40,7 +40,7 @@ jobs:
           -polaris_server_url '${{secrets.POLARIS_SERVER_URL}}' `
           -polaris_access_token '${{secrets.POLARIS_ACCESS_TOKEN}}' `
           -is_sast_enabled 'true'
-        echo "::set-output name=isSastEnabled::$isSastEnabled"
+        echo "::set-output name=isSastEnabled::true"
         if($isSastEnabled -eq $true) {
             Write-Host "Run polaris..."
         } else {
@@ -49,4 +49,4 @@ jobs:
           
     - name: Check outputs
       shell: pwsh
-      run: echo ${{ steps.prescription.outputs }}
+      run: echo ${{ steps.prescription.outputs.isSastEnabled }}
