--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -40,13 +40,8 @@ jobs:
           -polaris_server_url '${{secrets.POLARIS_SERVER_URL}}' `
           -polaris_access_token '${{secrets.POLARIS_ACCESS_TOKEN}}' `
           -is_sast_enabled 'true'
-        echo "::set-output name=isSastEnabled::true"
-        if($isSastEnabled -eq $true) {
-            Write-Host "Run polaris..."
-        } else {
-            Write-Host "Don't run polaris..."
-        }
+        echo "::set-output name=is_Sast_Enabled::{isSastEnabled}"        
           
     - name: Check outputs
       shell: pwsh
-      run: echo ${{ steps.prescription.outputs.isSastEnabled }}
+      run: echo ${{ steps.prescription.outputs.is_Sast_Enabled }}
