--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -40,7 +40,12 @@ jobs:
           -polaris_server_url '${{secrets.POLARIS_SERVER_URL}}' `
           -polaris_access_token '${{secrets.POLARIS_ACCESS_TOKEN}}' `
           -is_sast_enabled 'true'
-        echo "::set-output name=is_Sast_Enabled::${isSastEnabled}"        
+        echo "::set-output name=is_Sast_Enabled::$isSastEnabled"
+        if($is_Sast_Enabled -eq $true) {
+            Write-Host "Run polaris..."
+        } else {
+            Write-Host "Don't run polaris..."
+        }
           
     - name: Check outputs
       shell: pwsh
