--- a/.github/workflows/try-powershell.yml
+++ b/.github/workflows/try-powershell.yml
@@ -41,8 +41,7 @@ jobs:
           -polaris_access_token '${{secrets.POLARIS_ACCESS_TOKEN}}' `
           -is_sast_enabled 'true'
         echo "MY_VARIABLE=false" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
-        Write-Host  "MY_VARIABLE: $MY_VARIABLE"
           
     - name: Check outputs
       shell: pwsh
-      run: echo $MY_VARIABLE
+      run: echo env.MY_VARIABLE
